myK8S/media/audiobookshelf/audiobookshelf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf-svc
  namespace: media
spec:
  selector:
    app: audiobookshelf
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
